# fluss

./: .gitignore  Cargo.toml  README.md
binding/: Cargo.toml
crates/defui/: Cargo.toml  README.md
crates/defui/examples/: action.rs  async.rs  counter_redux.rs  counter_redux_nested.rs  key_mods.rs  lens.rs
crates/defui/src/: align.rs  binding.rs  events.rs  lib.rs  view.rs  view_tuple.rs  winit_event_loop.rs
crates/defui/src/old/: context.rs  event.rs  lib.rs  modifiers.rs  region.rs  view.rs  winit_event_loop.rs
crates/defui/src/old/examples/: any_view.rs  canvas.rs  clip.rs  counter.rs  counter_list.rs  counter_redux_redux.rs  custom_modifier.rs  font_size.rs  gestures.rs  knob.rs  menu.rs
crates/defui/src/old/views/: button.rs  clip.rs  stack_layout.rs  text.rs
crates/defui/src/views/: drag.rs  geom.rs  mod.rs  padding.rs  shapes.rs  slider.rs  text_editor.rs  toggle.rs  window.rs
crates/gtk/atk/: Cargo.toml
crates/gtk/atk/src/: editable_text.rs  table.rs
crates/gtk/atk/sys/: Cargo.toml  Gir.toml
crates/gtk/atk/sys/src/: lib.rs
crates/gtk/cairo/: Cargo.toml
crates/gtk/cairo/sys/: Cargo.toml
crates/gtk/gdk/: Cargo.toml
crates/gtk/gdk-pixbuf/: Cargo.toml
crates/gtk/gdk-pixbuf/sys/: Cargo.toml
crates/gtk/gdk/src/: device.rs  display.rs  window.rs
crates/gtk/gdk/sys/: Cargo.toml
crates/gtk/gdk/sys/src/: lib.rs
crates/gtk/gdkwayland/: Cargo.toml
crates/gtk/gdkwayland/src/: wayland_display.rs
crates/gtk/gdkwayland/sys/: Cargo.toml
crates/gtk/gdkwayland/sys/src/: lib.rs
crates/gtk/gdkx11/: Cargo.toml
crates/gtk/gdkx11/sys/: Cargo.toml
crates/gtk/gio/: Cargo.toml
crates/gtk/gio/sys/: Cargo.toml
crates/gtk/glib/: Cargo.toml
crates/gtk/glib-build-tools/: Cargo.toml
crates/gtk/glib-macros/: Cargo.toml
crates/gtk/glib/gobject-sys/: Cargo.toml
crates/gtk/glib/src/: lib.rs
crates/gtk/glib/sys/: Cargo.toml
crates/gtk/graphene/: Cargo.toml
crates/gtk/graphene/sys/: Cargo.toml
crates/gtk/gtk/: Cargo.toml
crates/gtk/gtk/src/: accel_group.rs  app_chooser.rs  rt.rs  (+32 more)
crates/gtk/gtk/sys/: Cargo.toml
crates/gtk/gtk/sys/src/: lib.rs  manual.rs
crates/gtk/pango/: Cargo.toml
crates/gtk/pango/sys/: Cargo.toml
crates/gtk/pangocairo/: Cargo.toml
crates/gtk/pangocairo/sys/: Cargo.toml
crates/kurbo/: Cargo.toml
crates/kurbo/src/: bezpath.rs  shape.rs
crates/piet-cairo/: Cargo.toml
crates/piet-common/: Cargo.toml
crates/piet-coregraphics/: Cargo.toml
crates/piet-direct2d/: Cargo.toml
crates/piet-web/: Cargo.toml
crates/piet/src/: lib.rs
crates/shell/: Cargo.toml
crates/shell/examples/: invalidate.rs  quit.rs  shello.rs
crates/shell/src/: application.rs  common_util.rs  error.rs  hotkey.rs  menu.rs  text.rs  util.rs  window.rs
crates/shell/src/backend/gtk/: application.rs  window.rs
crates/trist/: Cargo.toml
crates/trist/src/: lib.rs  main.rs
crates/trist/src/skia_backend/: gl_backend.rs  metal_backend.rs  mod.rs
defui/: Cargo.toml  README.md
defui/examples/: background.rs  basic.rs  calc.rs  counter2.rs  env.rs  gallery.rs  list.rs  slider.rs
defui/src/: align.rs  colors.rs  context.rs  lib.rs  main.rs  modifiers.rs  view.rs  viewtuple.rs  winit_event_loop.rs
defui/src/views/: anim.rs  canvas.rs  drag.rs  knob.rs  list.rs  map.rs  offset.rs  shapes.rs  stack.rs  text.rs  toggle.rs
flo/: Cargo.toml
flo/src/: drawer.rs  main.rs
fluss-macro/: Cargo.toml
fluss-macro/examples/hello/: Cargo.toml
fluss-macro/src/: lib.rs  view_args_parser.rs  view_parser.rs
gcl/: Cargo.toml  README.md  clippy.toml
gcl/benches/: cubic_arclen.rs  quad_arclen.rs  quartic.rs  rect_expand.rs
gcl/examples/: arclen_accuracy.rs  circle.rs  cubic_arclen.rs  ellipse.rs  fit_poly.rs  offset.rs  quad_intersect.rs  simplify.rs
gcl/src/: affine.rs  arc.rs  bezpath.rs  circle.rs  common.rs  cubicbez.rs  ellipse.rs  fit.rs  insets.rs  lib.rs  line.rs  mindist.rs  offset.rs  param_curve.rs  point.rs  quadbez.rs  quadspline.rs  rect.rs  rounded_rect.rs  rounded_rect_radii.rs  shape.rs  simplify.rs  size.rs  stroke.rs  svg.rs  translate_scale.rs  vec2.rs
piet/piet-cairo/: Cargo.toml
piet/piet-common/: Cargo.toml
piet/piet-coregraphics/: Cargo.toml
piet/piet/src/: lib.rs
rui/: Cargo.toml
rui/examples/: action.rs  any_view.rs  async.rs  background.rs  basic.rs  calc.rs  canvas.rs  counter.rs  counter2.rs  counter_list.rs  counter_redux.rs  counter_redux_nested.rs  counter_redux_redux.rs  custom_modifier.rs  env.rs  font_size.rs  gallery.rs  gestures.rs  key_mods.rs  knob.rs  lens.rs  list.rs  menu.rs  nested.rs  shapes.rs  slider.rs  text_layout.rs  todo_list.rs  zstack.rs
rui/src/: align.rs  context.rs  event.rs  lib.rs  modifiers.rs  region.rs  view.rs  winit_event_loop.rs
rui/src/views/: anim.rs  anyview.rs  background.rs  button.rs  canvas.rs  clip.rs  command.rs  cond.rs  drag.rs  emptyview.rs  env.rs  flex.rs  focus.rs  geom.rs  handle.rs  hover.rs  key.rs  knob.rs  list.rs  map.rs  mod.rs  modview.rs  offset.rs  padding.rs  role.rs  shapes.rs  size.rs  slider.rs  spacer.rs  stack.rs  state.rs  tap.rs  text.rs  text_editor.rs  toggle.rs  window.rs
shell/: Cargo.toml  README.md
shell/examples/: edit_text.rs  invalidate.rs  perftest.rs
shell/src/: application.rs  keyboard.rs  mouse.rs  screen.rs
shell/src/backend/: mod.rs
skd3d/: Cargo.toml
skgl/: Cargo.toml
skgl/src/: main.rs
skmetal/: Cargo.toml
skvulkan/: Cargo.toml
src/: app.rs  context.rs  event.rs  lib.rs  main.rs  public_api.rs  renderer.rs  view.rs
src/backend/: gl_backend.rs  metal_backend.rs  mod.rs
src/defui/: app.rs  context.rs  event.rs  filler.rs  mod.rs  modifiers.rs  stack.rs  text.rs  view.rs
src/editor/: canvas.rs  lib.rs  main.rs
src/editor/ui_components/: tab_system.rs
src/renderer/: mod.rs
src/renderer/types/: text.rs
src/ui_components/: editor.rs  mod.rs  split.rs  tab_system.rs
src/views/: filler.rs  mod.rs  modifiers.rs  stack.rs  text.rs
trist/: Cargo.toml
trist/src/: lib.rs  main.rs
trist/src/skia_backend/: d3d_backend.rs  gl_backend.rs  gl_linux_backend.rs  metal_backend.rs  mod.rs
(+20 files in other folders)
