[workspace]
members = [
    ".",
]

[package]
name = "fluss"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
winit = { version = "0.29" }
flo_binding = "2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
time = "0.3.20"

iced_wgpu = "0.12"
pollster = "0.3"

cfg-if = "1.0.0"
log = "0.4.21"
env_logger = "0.11.3"


[profile.release]
opt-level = 3
lto = true
strip = true
