[package]
name = "rui"
description = "Experimental Declarative UI library"
version = "0.1.0"
license = "MPL"
authors = ["Taylor Holliday <taylor@audulus.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["winit"]

[dependencies]
kurbo = { path = "../kurbo" }
futures = "0.3"
trist = { path = "../trist" }
accesskit = "0.11.0"
lazy_static = "1.4.0"
winit = { version = "0.29", optional = true }
flo_binding = "2"

# Seems we can't publish to crates.io with this dependency.
# baseview = { git = "https://github.com/RustAudio/baseview", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.76"
web-sys = { version = "^0.3.61", features = ["Location"] }
log = "0.4"
console_log = "0.1.2"
console_error_panic_hook = "0.1.6"
