[package]
name = "skgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.31.1"
glutin-winit = { version = "0.4" }
winit = { version = "0.29", features = ["rwh_05"] }
raw-window-handle = { version = "0.5.0" }
gl = "0.14"

# gl-window
[target.'cfg(not(target_os = "linux"))'.dependencies]
skia-safe = { version = "0.73", features = ["textlayout", "svg", "gl"] }


[target.'cfg(target_os = "linux")'.dependencies]
skia-safe = { version = "0.73", features = [
    "textlayout",
    "svg",
    "gl",
    "x11",
    "wayland",
] }
