[package]
name = "trist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["skia"]

skia = ["skia-safe"]

[dependencies]
gcl = { path = "../gcl" }


[target.'cfg(target_os = "windows")'.dependencies]
winit = { version = "0.29" }
# DirectX backend
# rwh06 = { package = "raw-window-handle", version = "0.6.0" }

# anyhow = { version = "1.0.75" }
# windows = { version = "0.52.0", features = [
#     "Win32",
#     "Win32_Graphics",
#     "Win32_Graphics_Dxgi",
#     "Win32_Graphics_Direct3D12",
#     "Win32_Graphics_Direct3D",
#     "Win32_Foundation",
#     "Win32_Graphics_Dxgi_Common",
# ] }

# skia-safe = { version = "0.70.0", features = [
#     "textlayout",
#     "svg",
#     "d3d",
# ], optional = true }

# OpenGL backend
glutin = { version = "0.31.1" }
glutin-winit = { version = "0.4" }
rwh05 = { package = "raw-window-handle", version = "0.5.0" }
gl = { version = "0.14.0" }

skia-safe = { version = "0.70.0", features = [
    "textlayout",
    "svg",
    "gl",
], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
winit = { version = "0.29" }

# Metal backend
# metal = { version = "0.27.0" }
# rwh06 = { package = "raw-window-handle", version = "0.6.0" }
# objc = { version = "0.2.7" }
# cocoa = { version = "0.25.0" }
# core-graphics-types = { version = "0.1.1" }
# foreign-types-shared = { version = "0.3.1" }

# skia-safe = { version = "0.70.0", features = [
#     "textlayout",
#     "svg",
#     "metal",
# ], optional = true }

# OpenGL backend
glutin = { version = "0.31.1" }
glutin-winit = { version = "0.4" }
rwh05 = { package = "raw-window-handle", version = "0.5.0" }
gl = { version = "0.14.0" }

skia-safe = { version = "0.70.0", features = [
    "textlayout",
    "svg",
    "gl",
], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.29" }

# OpenGL backend
glutin = { version = "0.31.1" }
glutin-winit = { version = "0.4" }
rwh05 = { package = "raw-window-handle", version = "0.5.0" }
gl = { version = "0.14.0" }

skia-safe = { version = "0.70.0", features = [
    "textlayout",
    "svg",
    "gl",
    "x11",
    "wayland",
], optional = true }
