[package]
name = "trist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["opengl-linux"]

opengl = ["winit_rwh05", "rwh05", "gl", "glutin", "glutin-winit", "skia-gl"]
opengl-linux = [
    "winit_rwh05",
    "rwh05",
    "gl",
    "glutin",
    "glutin-winit",
    "skia-gl-linux",
]
directx = ["windows", "skia-d3d", "winit_rwh06", "rwh06"]
metal = [
    "winit_rwh06",
    "rwh06",
    "dep:metal",
    "objc",
    "cocoa",
    "core-graphics-types",
    "foreign-types-shared",
]
vulkan = []
vulkan-linux = []

[dependencies]
gcl = { path = "../gcl" }
anyhow = { version = "1.0.75" }

# OpenGL
winit_rwh05 = { version = "0.29", package = "winit", features = [
    "rwh_05",
], optional = true }
rwh05 = { package = "raw-window-handle", version = "0.5.0", optional = true }
winit_rwh06 = { version = "0.29", package = "winit", optional = true }
rwh06 = { package = "raw-window-handle", version = "0.6.0", optional = true }

windows = { version = "0.54.0", features = [
    "Win32",
    "Win32_Graphics",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
], optional = true }

skia-d3d = { package = "skia-safe", version = "0.70.0", features = [
    "textlayout",
    "svg",
    "d3d",
], optional = true }


# Metal backend
metal = { version = "0.27.0", optional = true }
objc = { version = "0.2.7", optional = true }
cocoa = { version = "0.25.0", optional = true }
core-graphics-types = { version = "0.1.1", optional = true }
foreign-types-shared = { version = "0.3.1", optional = true }

skia-metal = { package = "skia-safe", version = "0.70.0", features = [
    "textlayout",
    "svg",
    "metal",
], optional = true }


# OpenGL backend
glutin = { version = "0.31.1", optional = true }
glutin-winit = { version = "0.4", optional = true }
gl = { version = "0.14.0", optional = true }

skia-gl = { package = "skia-safe", version = "0.70.0", features = [
    "textlayout",
    "svg",
    "gl",
], optional = true }


skia-gl-linux = { package = "skia-safe", version = "0.70.0", features = [
    "textlayout",
    "svg",
    "gl",
    "x11",
    "wayland",
], optional = true }
