[package]
name = "piet-cairo"
version = "0.6.2"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Cairo backend for piet 2D graphics abstraction."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/linebender/piet"
readme = "../README.md"
edition = "2018"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]

[dependencies]
piet = { version = "=0.6.2", path = "../piet" }

cairo = { workspace = true, default-features = false } # We don't need glib
pango = { workspace = true, features = ["v1_44"] }
pangocairo.workspace = true
unicode-segmentation = "1.10.0"
xi-unicode = "0.3.0"

[dev-dependencies]
piet = { version = "=0.6.2", path = "../piet", features = ["samples"] }
piet-common = { version = "=0.6.2", path = "../piet-common", features = [
    "png",
] }
criterion = "0.5"

[[bench]]
name = "make_image"
harness = false
