[package]
name = "trist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["skia-gl-linux"]

skia-gl-linux = ["skia-gl", "skia-x11", "skia-wayland"]
# skia-vk-linux = [""]
skia-gl-mac = ["skia-gl"]
skia-metal-mac = ["skia-metal"]
# skia-vk-win = [""]
skia-d3d-win = ["skia-d3d"]
skia-gl-win = ["skia-gl"]

skia = ["skia-safe", "winit"]

skia-gl = ["skia", "skia-safe/gl", "winit/rwh_05", "glutin", "glutin-winit", "rwh05", "gl"]
skia-egl = ["skia", "skia-safe/egl"]
skia-x11 = ["skia", "skia-safe/x11"]
skia-wayland = ["skia", "skia-safe/wayland"]
skia-vulkan = ["skia", "skia-safe/vulkan"]
skia-metal = ["skia", "skia-safe/metal", "objc", "cocoa", "core-graphics-types", "foreign-types-shared", "rwh06", "metal"]
skia-d3d = ["skia", "skia-safe/d3d", "anyhow", "windows", "rwh06"]

[dependencies]
skia-safe = { version = "0.70.0", features = [
    "textlayout",
], optional = true }
winit = { version = "0.29.3", optional = true }
kurbo = { path = "../kurbo" }

# gl-window
glutin = { version = "0.31.1", optional = true }
glutin-winit = { version = "0.4", optional = true }
rwh05 = { package = "raw-window-handle", version = "0.5.0", optional = true }
gl = { version = "0.14.0", optional = true }

# metal-window
metal = { version = "0.27.0", optional = true }
rwh06 = { package = "raw-window-handle", version = "0.6.0", optional = true }
objc = { version = "0.2.7", optional = true }
cocoa = { version = "0.25.0", optional = true }
core-graphics-types = { version = "0.1.1", optional = true }
foreign-types-shared = { version = "0.3.1", optional = true }

# d3d-window
anyhow = { version = "1.0.75", optional = true }
windows = { version = "0.52.0", features = [
    "Win32",
    "Win32_Graphics",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi_Common",
], optional = true }
