[package]
name = "piet-cairo"
version = "0.6.2"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "Cairo backend for piet 2D graphics abstraction."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/linebender/piet"
readme = "../README.md"
edition = "2018"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]

[dependencies]
piet = { path = "../piet" }

cairo-rs = { version = "0.18", default-features = false } # We don't need glib
pango = { version = "0.18", features = ["v1_44"] }
pangocairo = "0.18"
unicode-segmentation = "1.10.0"
xi-unicode = "0.3.0"

[dev-dependencies]
piet = { path = "../piet", features = ["samples"] }
piet-common = { path = "../piet-common", features = ["png"] }
criterion = "0.5.1"

[[bench]]
name = "make_image"
harness = false
