[package]
name = "cairo"
keywords = ["cairo", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/cairo/"
description = "Rust bindings for the Cairo library"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
version = "0.20.0"
repository = "https://github.com/gtk-rs/gtk-rs-core"
license = "MIT"
edition = "2021"
rust-version = "1.70"

[lib]
name = "cairo"

[features]
png = ["ffi/png"]
pdf = ["ffi/pdf"]
svg = ["ffi/svg"]
ps = ["ffi/ps"]
use_glib = ["glib", "ffi/use_glib"]
v1_16 = ["ffi/v1_16"]
v1_18 = ["v1_16", "ffi/v1_18"]
default = ["use_glib"]
freetype = ["ffi/freetype", "freetype-rs"]
script = ["ffi/script"]
xcb = ["ffi/xcb"]
xlib = ["ffi/xlib"]
win32-surface = ["ffi/win32-surface"]

[dependencies.glib]
optional = true
workspace = true

[dependencies]
ffi = { package = "cairo-sys", path = "sys" }
libc.workspace = true
bitflags.workspace = true
thiserror.workspace = true
freetype-rs = { version = "0.36", optional = true }

[dev-dependencies]
tempfile = "3.10"
float_eq = "1"
