[package]
name = "gdk-pixbuf"
keywords = ["gdk-pixbuf", "gtk-rs", "gnome"]
readme = "README.md"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/gdk_pixbuf/"
description = "Rust bindings for the GdkPixbuf library"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
version = "0.20.0"
repository = "https://github.com/gtk-rs/gtk-rs-core"
license = "MIT"
edition = "2021"
rust-version = "1.70"

[features]
v2_40 = ["ffi/v2_40"]
v2_42 = ["v2_40", "ffi/v2_42"]

[dependencies]
ffi = { package = "gdk-pixbuf-sys", path = "sys" }
libc.workspace = true
glib.workspace = true
gio.workspace = true

[dev-dependencies]
gir-format-check.workspace = true
