[package]
name = "gdk"
license = "MIT"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
keywords = ["gdk", "gtk", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "https://gtk-rs.org/gtk3-rs/stable/latest/docs/gdk/"
version = "0.19.0"
description = "Rust bindings for the GDK 3 library"
repository = "https://github.com/gtk-rs/gtk3-rs"
exclude = ["gir-files/*"]
edition = "2021"
rust-version = "1.70"

[features]
v3_24 = ["ffi/v3_24"]
unsafe-assume-initialized = []

[dependencies]
libc.workspace = true
ffi = { package = "gdk-sys", path = "sys" }
cairo.workspace = true
gdk-pixbuf.workspace = true
gio.workspace = true
glib.workspace = true
pango.workspace = true

[dev-dependencies]
gir-format-check = "^0.1"
