[package]
name = "glib-build-tools"
keywords = ["glib", "gio", "gtk-rs", "gnome", "build-dependencies"]
readme = "README.md"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/glib_build_tools"
description = "Rust bindings for the Gio library, build script utils crate"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
version = "0.20.0"
repository = "https://github.com/gtk-rs/gtk-rs-core"
license = "MIT"
edition = "2021"
rust-version = "1.70"

[dependencies]
gio.workspace = true
