[package]
name = "graphene-rs"
keywords = ["graphene", "graphene-rs", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/graphene/"
description = "Rust bindings for the Graphene library"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
version = "0.20.0"
repository = "https://github.com/gtk-rs/gtk-rs-core"
license = "MIT"
edition = "2021"
rust-version = "1.70"

[lib]
name = "graphene"

[features]
v1_12 = ["ffi/v1_12"]

[dependencies]
ffi = { package = "graphene-sys", path = "sys", version = "0.20" }
libc.workspace = true
glib.workspace = true

[dev-dependencies]
gir-format-check.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
