[package]
name = "pango"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/pango/"
keywords = ["pango", "gtk-rs", "gnome"]
readme = "README.md"
description = "Rust bindings for the Pango library"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
version = "0.20.0"
repository = "https://github.com/gtk-rs/gtk-rs-core"
license = "MIT"
edition = "2021"
rust-version = "1.70"

[features]
v1_42 = ["ffi/v1_42"]
v1_44 = ["v1_42", "ffi/v1_44"]
v1_46 = ["v1_44", "ffi/v1_46"]
v1_48 = ["v1_46", "ffi/v1_48"]
v1_50 = ["v1_48", "ffi/v1_50"]
v1_52 = ["v1_50", "ffi/v1_52"]

[dependencies]
ffi = { package = "pango-sys", path = "sys", version = "0.20" }
libc.workspace = true
glib.workspace = true
gio.workspace = true

[dev-dependencies]
gir-format-check.workspace = true
