[package]
name = "cairo-sys"
description = "FFI bindings to libcairo"
keywords = ["cairo", "ffi", "gtk-rs", "gnome"]
build = "build.rs"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
version = "0.20.0"
repository = "https://github.com/gtk-rs/gtk-rs-core"
license = "MIT"
edition = "2021"
rust-version = "1.70"

[package.metadata.system-deps.cairo]
name = "cairo"
version = "1.14"

[package.metadata.system-deps.cairo.v1_16]
version = "1.16"

[package.metadata.system-deps.cairo.v1_18]
version = "1.18"

[package.metadata.system-deps."cairo-gobject"]
name = "cairo-gobject"
version = "1.14"
feature = "use_glib"

[package.metadata.system-deps."cairo-gobject".v1_16]
version = "1.16"

[package.metadata.system-deps."cairo-gobject".v1_18]
version = "1.18"

[features]
v1_16 = []
v1_18 = ["v1_16"]
xlib = ["x11"]
png = []
pdf = []
svg = []
ps = []
freetype = []
script = []
xcb = []
use_glib = ["glib-sys"]
win32-surface = ["windows-sys"]

[dependencies]
libc.workspace = true
glib-sys = { workspace = true, optional = true }
x11 = { optional = true, version = "2.16", features = ["xlib"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Graphics_Gdi",
], optional = true }

[build-dependencies]
system-deps = "6"
