[package]
authors = ["The gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgdk-3"
homepage = "https://gtk-rs.org/"
keywords = ["gdk", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gdk-3"
name = "gdk-sys"
repository = "https://github.com/gtk-rs/gtk3-rs"
version = "0.19.0"
edition = "2021"
rust-version = "1.70"

[features]
v3_24 = []

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
libc.workspace = true
cairo-sys.workspace = true
gdk-pixbuf-sys.workspace = true
gio-sys.workspace = true
glib-sys.workspace = true
gobject-sys.workspace = true
pango-sys.workspace = true

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"


[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
features = []
rustc-args = ["--cfg", "docsrs"]

[package.metadata.system-deps.gdk_3_0]
name = "gdk-3.0"
version = "3.22"

[package.metadata.system-deps.gdk_3_0.v3_24]
version = "3.24"
