[package]
authors = ["The gtk-rs Project Developers"]
description = "FFI bindings to libgdk-3-wayland"
homepage = "https://gtk-rs.org/"
keywords = ["gdk", "ffi", "gtk-rs", "gnome"]
license = "MIT"
name = "gdkwayland-sys"
repository = "https://github.com/gtk-rs/gtk3-rs"
version = "0.19.0"
edition = "2021"
rust-version = "1.70"

[features]
v3_24 = ["gdk-sys/v3_24"]
v3_24_22 = ["v3_24"]

[dependencies]
libc.workspace = true
glib-sys.workspace = true
gobject-sys.workspace = true
gdk-sys.workspace = true

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"
