[package]
build = "build.rs"
description = "FFI bindings to PangoCairo"
keywords = ["gtk", "ffi", "gtk-rs", "gnome"]
name = "pangocairo-sys"
homepage = "https://gtk-rs.org/"
authors = ["The gtk-rs Project Developers"]
version = "0.20.0"
repository = "https://github.com/gtk-rs/gtk-rs-core"
license = "MIT"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
system-deps = "6"

[dependencies]
libc = "0.2"
cairo-sys.workspace = true
glib-sys.workspace = true
pango-sys.workspace = true

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"


[package.metadata.system-deps.pangocairo]
name = "pangocairo"
version = "1.40"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[features]
